[package]
name = "nitro-enclave-attestation-document"
version = "0.1.0"
authors = ["dermil01"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_cbor = {version = "0.11" }
serde = "1.0"
rustls = { version = "0.16", features = [ "dangerous_configuration" ] }
webpki = "0.21.2"
byteorder = "1.3.4"
serde_with = { version = "=1.9.4", default_features = false }
aws-nitro-enclaves-cose = "0.1.0"
openssl = "0.10.31"
